Feature: Added backend tests overall for services and controller